--- a/src/config.toml
+++ b/src/config.toml
@@ -2,7 +2,7 @@ baseURL = "https://jrdzha.github.io/"
 languageCode = "en-us"
 title = "Jared Zhao"
 theme = "detox"
-publishDir = "docs"
+publishDir = "../"
 [Params]
     twitter_name = "jrdzha_"
     github = "jrdzha"
