--- a/src/config.toml
+++ b/src/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://www.jaredzhao.com"
+baseURL = "https://www.jaredzhao.com/"
 languageCode = "en-us"
 title = "Jared Zhao"
 theme = "detox"
